<resources>
    <string name="app_name">YallaTrip</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="submit_button">Submit</string>

    <string name="confirmPassword">Confirm Password</string>
    <string name="Password">Password</string>
    <string name="email">E-Mail</string>
    <string name="signin">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_group">Groups</string>
    <string name="title_contacts">Contacts</string>
    <string name="txtViewDoNotHaveAccount">Don\'t have an account?</string>
    <string name="signinwith">Sign in with</string>
    <string name="txtViewAlreadyRegistered">Have an account? Login here</string>
    <string name="logout">Logout</string>
    <string name="typemobilenumber">Type mobile number</string>
    <string name="messagetext">Type your message</string>
    <string name="groupname">Enter Group Name</string>
    <string name="members">Members :</string>
    <string name="time">Time</string>
    <string name="send_via">Send Via</string>
    <string name="now">Now</string>
    <string name="custom">Custom</string>
    <string name="date">Date</string>
    <string name="time2">Time</string>
    <string name="title_activity_choose_reciver">ChooseReciverActivity</string>
    <string name="tab_text_1">Groups</string>
    <string name="tab_text_2">Contacts</string>
    <string name="title_pending">Pending</string>
    <string name="title_completed">Completed</string>
    <string name="tvinitnumber">010</string>
    <string name="choosesendingway">Choose sending way</string>
    <string name="whatsthenSMS">WhatsApp to all then SMS to others</string>
    <string name="smstoall">SMS to all</string>
    <string name="smsthenwhats">SMS to all with same carrier and whatsapp to others</string>
    <string name="first_name">Your Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="done_button">Done</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="signup">Sign Up</string>
    <string name="notacount">You don\'t have an account ? Please</string>
    <string name="sociallogin">Google SignUp</string>
    <string name="or">OR</string>

    <string name="haveacount">You already have an account ? Please </string>
    <string name="notes">Notes</string>

    <string name="addnote">addnote</string>
    <string name="notetext">Enter Your Note</string>
    <string name="newnote">New Note</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="start">Start</string>

    <string name="content_description_more">more</string>
    <string name="content_description_search">search</string>
    <string name="search">search</string>
    <string name="welcome">Welcome</string>
    <string name="upcoming">Upcoming</string>
    <string name="done">Done</string>
    <string name="cancelled">Cancelled</string>
    <string name="myAccount">My Account</string>
    <string name="userName">User name</string>
    <string name="other">Other</string>
    <string name="lang">Language</string>
    <string name="showMap">Show Map</string>
    <string name="title_more">More</string>
    <string name="title_activity_map_trips">Map</string>

    <string name="tripTitle">Trip Title</string>
    <string name="header">Header</string>
    <string name="locationIcon">Location</string>
    <string name="startPoint">Start Point</string>
    <string name="endPoint">End Point</string>
    <string name="createTrip">Create Trip</string>
    <string name="hintcreateTrip">Go Shopping</string>
    <string name="roundTrip">Round Trip</string>
    <string name="piceddate">12 Jan 2021</string>
    <string name="picedtime">12:10</string>
    <string name="addNote">Notes</string>
    <string name="tapToChoose">Tap to choose location</string>
    <string name="trip_Trip">Go Shopping</string>
    <string name="status">upcoming</string>
    <string name="more">More</string>
    <string name="edit">edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="snooze">Snooze</string>
    <string name="cancle">cancel</string>
    <string name="reminder">Time to Start your Trip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchPlaceHint">Search for a place</string>
    <string name="areYouSureToDeleteThisNote">Are you sure you want to delete This Note</string>
    <string name="yes">Yes</string>
    <string name="noteDeletedSuccessfully">Note Deleted Successfully</string>
    <string name="warning">Warning</string>
    <string name="errorMsgPermissionRequired">Floating Widget permission required</string>
    <string name="selectApplication">Select an application</string>
    <string name="yourTrips">Your Trips</string>

</resources>