<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/yellwoLight"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:background="@color/yellwoLight">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:background="#FECB2E"
            app:layout_constraintBottom_toTopOf="@+id/frameLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/newnote"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameLayout3"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:background="@color/yellwoLight"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout">

            <EditText
                android:id="@+id/dialogEditNoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:cursorVisible="true"
                android:ems="10"
                android:gravity="center|start|top"
                android:hint="@string/notetext"
                android:inputType="textMultiLine"
                android:paddingLeft="20dp"
                android:textAlignment="viewStart" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="#FECB2E"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

            <Button
                android:id="@+id/dialogButtonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@drawable/btnnote"
                android:text="@string/add"
                android:textColor="@color/greenDark"
                app:backgroundTint="#FFFFFF" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <Button
                android:id="@+id/dialogButtonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/btnnote"
                android:text="@android:string/cancel"
                android:textColor="@color/redMid"
                app:backgroundTint="#FFFFFF" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>